[gd_scene load_steps=10 format=3 uid="uid://c06n6ca84kyfc"]

[ext_resource type="Script" path="res://scripts/spy_on_scene.gd" id="1_b7scp"]
[ext_resource type="Texture2D" uid="uid://ms2h2fc16grc" path="res://assets/2d/light.png" id="2_7ceso"]
[ext_resource type="Theme" uid="uid://ct4daao2ntnt8" path="res://styles/spy_on_scene.tres" id="2_inpwf"]
[ext_resource type="Texture2D" uid="uid://cefrqvhm8eafy" path="res://assets/2d/pc.png" id="2_pabb2"]
[ext_resource type="Texture2D" uid="uid://cfixh7r4u6vrf" path="res://assets/2d/notepad.png" id="5_okpgy"]
[ext_resource type="Shader" path="res://styles/shaders/dropshadow.gdshader" id="5_sj5cp"]
[ext_resource type="Texture2D" uid="uid://dniohquigm6hw" path="res://assets/2d/pen.png" id="6_2igmw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_56b28"]
shader = ExtResource("5_sj5cp")
shader_parameter/drop_shadow_color = Color(0, 0, 0, 0.670588)
shader_parameter/shadow_offset = Vector2(0, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_eek8v"]
polygon = PackedVector2Array(-234, 97.6168, 114, 97.6168, 120, 103.474, 120, 288.946, 116, 294.803, -60, 208.9, -234, 294.803, -240, 109.331, -238, 101.521)

[node name="SpyOnScene" type="Node2D"]
modulate = Color(0.999944, 0.895596, 0.866222, 1)
position = Vector2(960, 540)
script = ExtResource("1_b7scp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -688.0
offset_top = -452.0
offset_right = 696.0
offset_bottom = -276.0
color = Color(0, 0, 0, 0.67451)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_top = 0.133
anchor_right = 0.013
anchor_bottom = 0.133
offset_left = 16.192
offset_top = 16.04
offset_right = 176.192
offset_bottom = 48.04
theme = ExtResource("2_inpwf")
theme_override_colors/font_color = Color(0, 0.717647, 0, 1)
text = "Transcript
"

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_pabb2")
metadata/_edit_lock_ = true

[node name="Notepad" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-600, 428)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Notepad"]
position = Vector2(-72.0001, 8)
scale = Vector2(0.362408, 0.406841)
polygon = PackedVector2Array(-314.5, -264.5, -329, -271.7, -329, -269.4, -338.2, -268.5, -344.7, -268.5, -352.7, -262.5, -354.1, -262.5, -360.6, -251.8, -363.4, -253.5, -368.2, -253.5, -371.2, -247.5, -373.4, -247.5, -372, -240.1, -372, -235.7, -379, -231.7, -379, -226.3, -363, -141.1, -363, -140.2, -355.5, -116.5, -354.7, -116.5, -328, 6.89999, -328, 11.8, -276.5, 196.5, -275.6, 196.5, -267, 235, -269, 237.8, -269, 240.2, -263, 247.3, -263, 259.1, -259.1, 265.5, -258.5, 265.5, -239.1, 343.5, 362.1, 343.5, 273.3, 126.5, 272.4, 126.5, 162, -184, 162, -187.6, 159, -189.6, 159, -190.7, 156.9, -191.8, 154.2, -190.1, 151, -199.8, 151, -202.3, 142, -211.3, 142, -212.7, 136.5, -215.5, 128.2, -215.5, 125.2, -212.6, 118, -215.8, 118, -217.5, 108.2, -217.5, 105.2, -214.6, 98, -217.8, 98, -220.2, 88.8, -217.5, 81, -221.7, 81, -224.2, 68.7, -220.5, 67.6, -220.5, 61, -224.7, 61, -226.9, 47.6, -224.6, 42.7, -228.5, 31.3, -228.5, 27.3, -225.5, 26.3, -225.5, 16, -229, 16, -231.1, 5.89999, -228.5, -4.79999, -228.5, -12.8, -220.6, -16, -227, -16, -229.4, -24, -236.4, -24, -238, -31, -240, -31, -242.4, -41.4, -238.5, -43.5, -238.5, -47, -239.9, -47, -242, -58.4, -239.5, -64, -241.8, -64, -244.3, -75.3, -240.5, -82, -243.8, -82, -245.5, -92, -245.5, -94.8, -241.8, -100, -245.6, -100, -247.6, -131.1, -246.5, -132.6, -246.5, -142, -250.8, -142, -252.7, -162.2, -250.5, -167.8, -250.5, -181.8, -236.5, -184.5, -236.5, -187, -246.5, -187, -249.6, -202, -259.6, -202, -261.9, -216.5, -259.3, -221.6, -261.5, -229.8, -261.5, -233.5, -257.8, -236, -260.3, -236, -261.9, -245, -265, -245, -266.9, -257.7, -264.4, -259.4, -265.5, -273.8, -265.5, -276.7, -262.6, -285, -266.8, -285, -269.1, -296.2, -266.4, -298.5, -267.5, -310.8, -267.5, -313.8, -264.5)
metadata/_edit_lock_ = true

[node name="NotepadSprite" type="Sprite2D" parent="Notepad"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_56b28")
position = Vector2(-72, 8)
scale = Vector2(0.362408, 0.406841)
texture = ExtResource("5_okpgy")
metadata/_edit_lock_ = true

[node name="Lapicera" type="Sprite2D" parent="Notepad"]
position = Vector2(-72, 32)
scale = Vector2(0.281421, 0.281421)
texture = ExtResource("6_2igmw")

[node name="LightOccluderContainer" type="Node2D" parent="."]
position = Vector2(240, -860)
scale = Vector2(4, 4.09766)

[node name="LightOccluder2D" type="LightOccluder2D" parent="LightOccluderContainer"]
occluder = SubResource("OccluderPolygon2D_eek8v")

[node name="Sun" type="PointLight2D" parent="."]
unique_name_in_owner = true
position = Vector2(1184, -940)
scale = Vector2(4, 4.09766)
color = Color(0.976471, 0.282353, 0.00784314, 1)
energy = 1.3
range_item_cull_mask = 31
shadow_enabled = true
shadow_item_cull_mask = 31
texture = ExtResource("2_7ceso")
texture_scale = 1.15

[connection signal="input_event" from="Notepad" to="." method="_on_notepad_input_event"]
[connection signal="mouse_entered" from="Notepad" to="." method="_on_notepad_mouse_entered"]
[connection signal="mouse_exited" from="Notepad" to="." method="_on_notepad_mouse_exited"]
